--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "openlist-desktop-service"
+name = "openlist_desktop_service"
 version = "1.0.0"
 edition = "2024"
 authors = ["Kuingsmile"]
 license = "GPL-3.0"
-repository = "https://github.com/Kuingsmile/service-demo.git"
+repository = "https://github.com/OpenListTeam/openlist-desktop-service.git"
 
 [[bin]]
 name = "openlist-desktop-service"
@@ -21,7 +21,7 @@ path = "src/uninstall.rs"
 [dependencies]
 anyhow = "1.0.98"
 log = "0.4.27"
-log4rs = "1.3"
+log4rs = { version = "1.3", features = ["rolling_file_appender"] }
 once_cell = "1.21.3"
 serde_json = "1.0.138"
 parking_lot = "0.12"
@@ -39,6 +39,7 @@ tower-http = { version = "0.6.1", features = ["cors"] }
 hyper = { version = "1.5.0", features = ["full"] }
 winapi = { version = "0.3", features = ["namedpipeapi", "handleapi", "winbase", "winnt", "winerror", "errhandlingapi", "accctrl", "aclapi", "securitybaseapi", "minwinbase", "wingdi"] }
 encoding_rs = "0.8.33"
+uuid = { version = "1.0", features = ["v4", "serde"] }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 openssl = { version = "0.10.72", features = ["vendored"] }
