--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,7 +49,9 @@ windows = {version = "0.61.3", features = [
     "Win32_System_Threading",
     "Win32_System_Environment",
     "Win32_Storage_FileSystem",
-    "Win32_UI_WindowsAndMessaging"
+    "Win32_UI_WindowsAndMessaging",
+    "Win32_UI_Shell",
+    "Win32_System_Com"
 ]}
 
 [profile.release]
