--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,7 +51,8 @@ windows = {version = "0.61.3", features = [
     "Win32_Storage_FileSystem",
     "Win32_UI_WindowsAndMessaging",
     "Win32_UI_Shell",
-    "Win32_System_Com"
+    "Win32_System_Com",
+    "Wdk_System_SystemServices"
 ]}
 
 [profile.release]
